# ckanext-thaigdc2fa

./: MANIFEST.in  README.md  requirements.txt  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/thaigdc2fa/: auth_helper.py  model.py  plugin.py  views.py
ckanext/thaigdc2fa/assets/: script.js  webassets.yml
ckanext/thaigdc2fa/templates/: header.html
ckanext/thaigdc2fa/templates/thaigdc2fa/: admin_users.html  disable.html  setup.html  verify.html
ckanext/thaigdc2fa/tests/: test_plugin.py
