[metadata]
name = ckanext-thaigdc2fa
version = 0.0.1
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com//ckanext-thaigdc2fa
author = 
author_email = 
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             thaigdc2fa = ckanext.thaigdc2fa.plugin:Thaigdc2faPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/thaigdc2fa/i18n/ckanext-thaigdc2fa.pot
width = 80

[init_catalog]
domain = ckanext-thaigdc2fa
input_file = ckanext/thaigdc2fa/i18n/ckanext-thaigdc2fa.pot
output_dir = ckanext/thaigdc2fa/i18n

[update_catalog]
domain = ckanext-thaigdc2fa
input_file = ckanext/thaigdc2fa/i18n/ckanext-thaigdc2fa.pot
output_dir = ckanext/thaigdc2fa/i18n
previous = true

[compile_catalog]
domain = ckanext-thaigdc2fa
directory = ckanext/thaigdc2fa/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
